--- a/index.html
+++ b/index.html
@@ -5,25 +5,21 @@
     <title>Pan Tadeusz</title>
 </head>
 <body>
-    <h1>Pan Tadeusz,</h1>
+    <h1>Pan Tadeusz, czyli Ostatni zajazd na Litwie – poemat epicki Adama Mickiewicza wydany w dwóch tomach w 1834 w Paryżu przez Aleksandra Jełowickiego.</h1>
     <p>Spis treści</p>
     <ul>
         <li><a href="./k1.html"</li>
         <li><a href="./k2.html"</li>
         <li><a href="./k3.html"</li>
+        <li><a href="./k4.html"</li>
         <li><a href="./k5.html"</li>
         <li><a href="./k6.html"</li>
         <li><a href="./k7.html"</li>
+        <li><a href="./k8.html"</li>    
         <li><a href="./k9.html"</li>
+        <li><a href="./k10.html"</li>
         <li><a href="./k11.html"</li>
         <li><a href="./k12.html"</li>
-        
     </ul>
 </body>
-
-
-
-
-
-
 </html>
