--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
-<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8"
-    <title>Pan Tadeusz</title>
+	<meta charset="utf-8">
+	<title>Pan Tadeusz</title>
 </head>
 <body>
-    <h1>Pan Tadeusz, czyli Ostatni zajazd na Litwie – poemat epicki Adama Mickiewicza wydany w dwóch tomach w 1834 w Paryżu przez Aleksandra Jełowickiego.</h1>
-    <p>Spis treści</p>
-    <ul>
-        <li><a href="./k1.html"</li>
-        <li><a href="./k2.html"</li>
-        <li><a href="./k3.html"</li>
-        <li><a href="./k4.html"</li>
-        <li><a href="./k5.html"</li>
-        <li><a href="./k6.html"</li>
-        <li><a href="./k7.html"</li>
-        <li><a href="./k8.html"</li>    
-        <li><a href="./k9.html"</li>
-        <li><a href="./k10.html"</li>
-        <li><a href="./k11.html"</li>
-        <li><a href="./k12.html"</li>
-    </ul>
+	<h1>Pan Tadeusz, czyli Ostatni zajazd na litwie: Historia szlachecka z roku 1811 i 1812 we dwunastu księgach wierszem</h1>
+	<p>Spis treści</p>
+	<ul>
+		<li><a href="./k1.html">Księga 1</a></li>
+		<li><a href="./k2.html">Księga 2</a></li>
+		<li><a href="./k3.html">Księga 3</a></li>
+		<li><a href="./k4.html">Księga 4</a></li>
+		<li><a href="./k5.html">Księga 5</a></li>
+		<li><a href="./k6.html">Księga 6</a></li>
+		<li><a href="./k7.html">Księga 7</a></li>
+		<li><a href="./k8.html">Księga 8</a></li>
+		<li><a href="./k9.html">Księga 9</a></li>
+		<li><a href="./k10.html">Księga 10</a></li>
+		<li><a href="./k11.html">Księga 11</a></li>
+		<li><a href="./k12.html">Księga 12</a></li>
+	</ul>
 </body>
 </html>
